foundations/flex/06-flex-layout/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
  height: 100vh;
  margin: 0;
  overflow: hidden;
  font-family: Roboto, sans-serif;
}

img {
  width: 600px;
}

button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #eee;
}

input {
  border: 1px solid #ddd;
  border-radius: 16px;
  padding: 8px 24px;
  width: 400px;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

a {
  text-decoration: none;
  color: inherit;
  
}

ul {
  list-style-type: none;
}
.header {
  display: flex;
  justify-content: space-between;
}

.left-links, .right-links {
  display:flex;
  gap: 10px;
  padding: 0 16px 0 16px;
}

.footer {
  display: flex;
  justify-content: space-between;
  background-color: #eeeeee;
  align-items: flex-end;
}

